2008-01-10 Ville Vainio  <vivainio@gmail.com>

	* Prompts.py (set_p_str): do not crash on illegal prompt strings

2008-01-08 Ville Vainio  <vivainio@gmail.com>

	* '%macro -r' (raw mode) is now default in sh profile.

2007-12-31  Ville Vainio  <vivainio@gmail.com>

	* completer.py: custom completer matching is now case sensitive
	(#207).
	
	* ultraTB.py, iplib.py: Add some KeyboardInterrupt catching in
	an attempt to prevent occasional crashes.
	
	* CrashHandler.py: Crash log dump now asks user to press enter
	before exiting.
	
	* Store _ip in user_ns instead of __builtin__, enabling safer
	coexistence of multiple IPython instances in the same python
	interpreter (#197).
	
	* Debugger.py, ipmaker.py: Need to add '-pydb' command line
	switch to enable pydb in post-mortem debugging and %run -d.

2007-12-28  Ville Vainio  <vivainio@gmail.com>

	* ipy_server.py: TCP socket server for "remote control" of an IPython 
	instance.
	
	* Debugger.py: Change to PSF license
	
	* simplegeneric.py: Add license & author notes.
	
	* ipy_fsops.py: Added PathObj and FileObj, an object-oriented way 
	to navigate file system with a custom completer. Run 
	ipy_fsops.test_pathobj() to play with it.

2007-12-28  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/dtutils.py: Add utilities for interactively running
	doctests.  Still needs work to more easily handle the namespace of
	the package one may be working on, but the basics are in place.

2007-12-27  Ville Vainio  <vivainio@gmail.com>

	* ipy_completers.py: Applied arno's patch to get proper list of 
	packages in import completer. Closes #196.

2007-12-20  Ville Vainio  <vivainio@gmail.com>

	* completer.py, generics.py(complete_object): Allow 
	custom complers based on python objects via simplegeneric.
	See generics.py / my_demo_complete_object

2007-12-13  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Prompts.py (BasePrompt.__nonzero__): add proper boolean